--- a/regestration.html
+++ b/regestration.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+	   <meta charset="utf-8">
        <title>Registration form</title>
     </head>
     <body>
@@ -14,7 +15,7 @@
             <input type="email" id="email" name="email" required autocomplete="off" multiple/>
 			</br></br>
             <label for="telephone">Номер телефона</label>
-            <input type="tel" id="telephone" name="telephone" placeholder="xxx xxx-xx-xx" pattern="[0-9]{3}[0-9]{3}-[0-9]{2}-[0-9]{2}" required/>
+            <input type="tel" id="telephone" name="telephone" placeholder="xxx xxx-xx-xx" pattern="[0-9]{3}\s[0-9]{3}-[0-9]{2}-[0-9]{2}" required/>
             </br></br>
 			<label for="site">Веб-сайт</label>
             <input type="url" id="site" name="site" />
